--- a/index.html
+++ b/index.html
@@ -3,183 +3,316 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Weather Forecast - Pakistan</title>
+  <title>Pakistani City Weather Forecast | Travel Agency</title>
   <style>
+    /* (All your existing styles stay unchanged, reused as-is) */
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f0f8ff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      line-height: 1.6;
       color: #333;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #f5f7fa;
+    }
+
+    header {
+      background-color: #2c3e50;
+      color: white;
+      padding: 20px;
+      border-radius: 8px;
+      margin-bottom: 30px;
       text-align: center;
     }
 
     h1 {
-      margin-top: 20px;
+      margin: 0;
+      font-size: 2.2em;
     }
 
-    .search-container {
-      margin: 20px;
+    .tagline {
+      font-style: italic;
+      margin-top: 10px;
     }
 
-    input[type="text"] {
-      padding: 10px;
-      width: 250px;
-      border-radius: 5px;
-      border: 1px solid #aaa;
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    .city-selector {
+      flex: 1;
+      min-width: 300px;
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+
+    .forecast-container {
+      flex: 3;
+      min-width: 300px;
+    }
+
+    select, button {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 15px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
       font-size: 16px;
     }
 
     button {
-      padding: 10px 15px;
-      margin: 5px;
-      background-color: #0288d1;
+      background-color: #3498db;
       color: white;
       border: none;
-      border-radius: 5px;
       cursor: pointer;
-      font-size: 15px;
+      font-weight: bold;
+      transition: background-color 0.3s;
     }
 
-    .toggle {
-      margin-top: 10px;
+    button:hover {
+      background-color: #2980b9;
     }
 
-    .weather-section {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .current, .forecast {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+    .forecast-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
       gap: 15px;
-      margin: 20px;
     }
 
-    .card {
+    .forecast-card {
       background: white;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
       padding: 15px;
-      width: 180px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      text-align: center;
     }
 
-    .card img {
-      width: 60px;
+    .forecast-date {
+      font-weight: bold;
+      margin-bottom: 10px;
+      color: #2c3e50;
     }
 
-    @media (max-width: 600px) {
-      .card {
-        width: 90%;
-      }
+    .weather-icon {
+      font-size: 2.5em;
+      margin: 10px 0;
+    }
 
-      input[type="text"] {
-        width: 80%;
+    .temp {
+      font-size: 1.2em;
+      font-weight: bold;
+    }
+
+    .min-temp {
+      color: #3498db;
+    }
+
+    .max-temp {
+      color: #e74c3c;
+    }
+
+    .weather-desc {
+      font-size: 0.9em;
+      margin-top: 5px;
+      color: #7f8c8d;
+    }
+
+    .booking-cta {
+      background-color: #27ae60;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      border-radius: 8px;
+      margin-top: 30px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .booking-cta:hover {
+      background-color: #219653;
+    }
+
+    .loading {
+      text-align: center;
+      padding: 20px;
+      font-style: italic;
+      color: #7f8c8d;
+    }
+
+    .error {
+      color: #e74c3c;
+      text-align: center;
+      padding: 20px;
+      font-weight: bold;
+    }
+
+    @media (max-width: 768px) {
+      .container {
+        flex-direction: column;
       }
     }
   </style>
 </head>
 <body>
+  <header>
+    <h1>Pakistani City Weather Forecast</h1>
+    <p class="tagline">Plan your perfect local getaway with our 7-day weather forecasts</p>
+  </header>
 
-  <h1>Weather Forecast - Pakistan</h1>
+  <div class="container">
+    <div class="city-selector">
+      <h2>Select a City</h2>
+      <select id="citySelect">
+        <option value="">-- Choose a Pakistani City --</option>
+        <option value="Islamabad,33.6844,73.0479">Islamabad</option>
+        <option value="Lahore,31.5204,74.3587">Lahore</option>
+        <option value="Karachi,24.8607,67.0011">Karachi</option>
+        <option value="Peshawar,34.0150,71.5805">Peshawar</option>
+        <option value="Quetta,30.1798,66.9750">Quetta</option>
+        <option value="Multan,30.1575,71.5249">Multan</option>
+        <option value="Faisalabad,31.4504,73.1350">Faisalabad</option>
+        <option value="Hyderabad,25.3960,68.3578">Hyderabad</option>
+        <option value="Gujranwala,32.1877,74.1945">Gujranwala</option>
+        <option value="Rawalpindi,33.5651,73.0169">Rawalpindi</option>
+        <option value="Sialkot,32.4945,74.5229">Sialkot</option>
+        <option value="Abbottabad,34.1463,73.2117">Abbottabad</option>
+        <option value="Bahawalpur,29.3956,71.6836">Bahawalpur</option>
+        <option value="Sukkur,27.7052,68.8574">Sukkur</option>
+        <option value="Mirpur,33.1478,73.7519">Mirpur</option>
+      </select>
+      <button id="getForecast">Get 7-Day Forecast</button>
 
-  <div class="search-container">
-    <input type="text" id="cityInput" placeholder="Enter city (e.g. Lahore)">
-    <button onclick="getWeather()">Search</button>
-    <button onclick="getLocationWeather()">📍 Auto-detect</button>
-    <div class="toggle">
-      <label>
-        <input type="checkbox" id="unitSwitch" onchange="toggleUnits()"> Show in Fahrenheit
-      </label>
+      <div class="booking-cta" onclick="location.href='#';">
+        <h3>Ready to Explore Pakistan?</h3>
+        <p>Find great travel deals for local adventures!</p>
+      </div>
+    </div>
+
+    <div class="forecast-container">
+      <h2>7-Day Weather Forecast</h2>
+      <div id="forecastResults">
+        <p>Please select a city to view the weather forecast.</p>
+      </div>
     </div>
   </div>
 
-  <div class="weather-section">
-    <div id="currentWeather" class="current"></div>
-    <div id="forecast" class="forecast"></div>
-  </div>
-
   <script>
-    const API_KEY = 'a2d43c4785b841f083a54339251707';
-    let currentUnit = 'C';
+    document.getElementById('getForecast').addEventListener('click', function() {
+      const citySelect = document.getElementById('citySelect');
+      const selectedValue = citySelect.value;
 
-    async function getWeather(city = null) {
-      const query = city || document.getElementById('cityInput').value;
-      if (!query) return alert("Please enter a city name.");
+      if (!selectedValue) {
+        alert('Please select a city first.');
+        return;
+      }
 
-      const url = `https://api.weatherapi.com/v1/forecast.json?key=${API_KEY}&q=${query}&days=7&aqi=no&alerts=no`;
+      const [cityName, lat, lon] = selectedValue.split(',');
+      fetchWeatherForecast(lat, lon, cityName);
+    });
 
-      try {
-        const res = await fetch(url);
-        const data = await res.json();
+    function fetchWeatherForecast(latitude, longitude, cityName) {
+      const forecastResults = document.getElementById('forecastResults');
+      forecastResults.innerHTML = '<div class="loading">Loading weather data...</div>';
 
-        const cw = data.current;
-        const location = data.location.name;
+      const apiUrl = `https://www.7timer.info/bin/api.pl?lon=${longitude}&lat=${latitude}&product=civillight&output=json`;
 
-        const isF = currentUnit === 'F';
-        const temp = isF ? cw.temp_f : cw.temp_c;
-        const wind = isF ? cw.wind_mph + ' mph' : cw.wind_kph + ' km/h';
+      fetch(apiUrl)
+        .then(response => {
+          if (!response.ok) throw new Error('Network response was not ok');
+          return response.json();
+        })
+        .then(data => {
+          displayForecast(data, cityName);
+        })
+        .catch(error => {
+          console.error('Error fetching weather data:', error);
+          forecastResults.innerHTML = `<div class="error">Failed to load weather data. Please try again later.</div>`;
+        });
+    }
 
-        const currentHTML = `
-          <div class="card">
-            <h3>${location}</h3>
-            <img src="https:${cw.condition.icon}" alt="">
-            <p><strong>${cw.condition.text}</strong></p>
-            <p>Temperature: ${temp}°${currentUnit}</p>
-            <p>Humidity: ${cw.humidity}%</p>
-            <p>Wind: ${wind}</p>
+    function displayForecast(weatherData, cityName) {
+      const forecastResults = document.getElementById('forecastResults');
+
+      if (!weatherData.dataseries || weatherData.dataseries.length === 0) {
+        forecastResults.innerHTML = `<div class="error">No weather data available for ${cityName}.</div>`;
+        return;
+      }
+
+      let html = `<h3>${cityName} - Next 7 Days</h3><div class="forecast-grid">`;
+
+      weatherData.dataseries.forEach(day => {
+        const date = new Date(
+          parseInt(day.date.toString().substring(0, 4)),
+          parseInt(day.date.toString().substring(4, 6)) - 1,
+          parseInt(day.date.toString().substring(6, 8))
+        );
+
+        const dayName = date.toLocaleDateString('en-US', { weekday: 'short' });
+        const monthDay = date.toLocaleDateString('en-US', { month: 'short', day: 'numeric' });
+
+        const weatherIcon = getWeatherIcon(day.weather);
+        const weatherDesc = getWeatherDescription(day.weather);
+
+        html += `
+          <div class="forecast-card">
+            <div class="forecast-date">${dayName}<br>${monthDay}</div>
+            <div class="weather-icon">${weatherIcon}</div>
+            <div class="temp">
+              <span class="max-temp">${day.temp2m.max}°C</span> / 
+              <span class="min-temp">${day.temp2m.min}°C</span>
+            </div>
+            <div class="weather-desc">${weatherDesc}</div>
           </div>
         `;
-        document.getElementById('currentWeather').innerHTML = currentHTML;
+      });
 
-        const days = data.forecast.forecastday;
-        let forecastHTML = '';
-        days.forEach(day => {
-          const d = day.day;
-          forecastHTML += `
-            <div class="card">
-              <h4>${day.date}</h4>
-              <img src="https:${d.condition.icon}" alt="">
-              <p>${d.condition.text}</p>
-              <p>Avg: ${isF ? d.avgtemp_f : d.avgtemp_c}°${currentUnit}</p>
-              <p>Max: ${isF ? d.maxtemp_f : d.maxtemp_c}°</p>
-              <p>Min: ${isF ? d.mintemp_f : d.mintemp_c}°</p>
-            </div>`;
-        });
-        document.getElementById('forecast').innerHTML = forecastHTML;
+      html += '</div>';
+      forecastResults.innerHTML = html;
+    }
 
-      } catch (err) {
-        console.error(err);
-        document.getElementById('forecast').innerHTML = '<p>⚠️ Unable to fetch weather data.</p>';
+    function getWeatherIcon(code) {
+      switch (code) {
+        case 'clear': return '☀️';
+        case 'pcloudy': return '⛅';
+        case 'mcloudy': return '☁️';
+        case 'cloudy': return '☁️';
+        case 'humid': return '🌫️';
+        case 'lightrain': return '🌧️';
+        case 'oshower':
+        case 'ishower': return '🌦️';
+        case 'lightsnow':
+        case 'snow': return '❄️';
+        case 'rain': return '🌧️';
+        case 'rainsnow': return '🌨️';
+        case 'ts': return '⚡';
+        case 'tsrain': return '⛈️';
+        default: return '🌈';
       }
     }
 
-    function toggleUnits() {
-      currentUnit = document.getElementById('unitSwitch').checked ? 'F' : 'C';
-      const city = document.getElementById('cityInput').value;
-      if (city) getWeather(city);
+    function getWeatherDescription(code) {
+      const descriptions = {
+        clear: 'Clear skies',
+        pcloudy: 'Partly cloudy',
+        mcloudy: 'Mostly cloudy',
+        cloudy: 'Cloudy',
+        humid: 'Humid',
+        lightrain: 'Light rain',
+        oshower: 'Occasional showers',
+        ishower: 'Isolated showers',
+        lightsnow: 'Light snow',
+        rain: 'Rain',
+        snow: 'Snow',
+        rainsnow: 'Rain and snow',
+        ts: 'Thunderstorm',
+        tsrain: 'Thunderstorm with rain'
+      };
+      return descriptions[code] || 'Variable conditions';
     }
-
-    function getLocationWeather() {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(
-          pos => {
-            const lat = pos.coords.latitude;
-            const lon = pos.coords.longitude;
-            getWeather(`${lat},${lon}`);
-          },
-          () => alert("Location access denied.")
-        );
-      } else {
-        alert("Geolocation not supported.");
-      }
-    }
-
-    // Load user location weather on first visit
-    window.onload = () => getLocationWeather();
   </script>
-
 </body>
 </html>
